# benchmark

./: .env.example  .gitignore  .gitmodules  BENCHMARK_README.md  INSTALLATION.md  README.md  benchmark_main.py  benchmark_requirements.txt  benchmark_script.py  check_submodules.py  install_python39.py  pyproject.toml  requirements.txt  requirements_python39.txt  run.py  test_basic_refactored.py  test_benchmark.py  test_import.py  test_model_integration.py  test_real_benchmark.py  test_refactored_benchmark.py
app/: benchmark.py  config.py  log.py
app/argmining/: __init__.py
app/argmining/argmining/: __init__.py
app/argmining/argmining/implementations/: openai_llm_classifier.py  tinyllama_llm_classifier.py
app/argmining/implementations/: __init__.py  encoder_model_loader.py  openai_claim_premise_linker.py  openai_llm_classifier.py  tinyllama_llm_classifier.py
app/db_connector/: __init__.py
app/db_connector/db/: __init__.py  config.py  db.py  models.py  quality_data.py  queries.py
benchmark/: README.md  __init__.py
benchmark/core/: __init__.py  benchmark.py  results.py
benchmark/data/: __init__.py  loader.py
benchmark/implementations/: __init__.py  base.py  deberta.py  gpt_models.py  hf_chat_models.py  modernbert.py  openai.py  tinyllama.py
benchmark/metrics/: __init__.py  evaluator.py
benchmark/tasks/: __init__.py  adu_extraction.py  base.py  claim_premise_linking.py  stance_classification.py
benchmark/utils/: __init__.py  file_handlers.py  logging.py  logging_utils.py  metrics_calculator.py
docs/: BENCHMARK_USAGE.md  INDIVIDUAL_EXECUTION_README.md  INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  OPENAI_API_TESTS.md  PYTHON39_COMPATIBILITY.md  TESTING.md  issues.md
examples/: individual_benchmark_examples.py
tests/: FINAL_TEST_SUMMARY.md  IMPLEMENTATION_TESTING.md  README.md  README_REFACTORED_TESTS.md  SIMPLIFIED_TEST_SUMMARY.md  conftest.py  conftest_refactored.py  pytest.ini  pytest_simplified.ini  requirements_test.txt  run_database_tests.py  run_refactored_tests.py  run_simplified_tests.py  test_benchmark.py  test_benchmark_individual.py  test_benchmark_integration.py  test_benchmark_pytest.py  test_database_connection.py  test_database_status.py  test_implementations.py  test_imports.py  test_integration.py  test_openai_api.py  test_openai_connection.py  test_python39_compatibility.py  test_refactored_benchmark.py  test_refactored_components.py  test_simplified.py
