[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argument-mining-benchmark"
version = "1.0.0"
description = "Benchmark tool for argument mining implementations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Horizontal Labs", email = "info@horizontal-labs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # Evaluation metrics
    "seqeval>=1.2.2",
    "nltk>=3.8.1",
    
    # Database and data handling
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.11.0",
    
    # Machine Learning
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    
    # Optional: for advanced visualizations
    "plotly>=5.15.0",
    
    # Benchmark specific
    "openai>=1.0.0",
    "pydantic>=1.10.0",
    "dataclasses-json>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Horizontal-Labs/Argument-Mining"
Repository = "https://github.com/Horizontal-Labs/Argument-Mining"
Issues = "https://github.com/Horizontal-Labs/Argument-Mining/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 