[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argument-mining-benchmark"
version = "1.0.0"
description = "Benchmark tool for argument mining implementations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Horizontal Labs", email = "info@horizontal-labs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # Evaluation metrics
    "seqeval>=1.2.2",
    "nltk>=3.8.1",
    
    # Database and data handling
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.11.0",
    
    # Machine Learning
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    
    # Optional: for advanced visualizations
    "plotly>=5.15.0",
    
    # Benchmark specific
    "openai>=1.0.0",
    "pydantic>=1.10.0",
    "dataclasses-json>=0.5.0",
    
    # Database connector dependencies (from db-connector submodule)
    "greenlet>=3.2.1",
    "mysql-connector-python>=9.3.0",
    "PyMySQL>=1.1.1",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "typing_extensions>=4.13.2",
    "tzdata>=2025.2",
    
    # Argument mining API dependencies (from argument-mining-api submodule)
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "bitsandbytes>=0.46.0",
    "charset-normalizer>=3.4.2",
    "certifi>=2025.6.15",
    "colorama>=0.4.6",
    "fastapi>=0.115.13",
    "h11>=0.16.0",
    "huggingface-hub>=0.33.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "h11>=0.16.0",
    "peft>=0.16.0",
    "protobuf>=6.31.1",
    "pydantic-settings>=2.10.1",
    "pydantic_core>=2.33.2",
    "python-dotenv>=1.1.1",
    "sniffio>=1.3.1",
    "starlette>=0.46.2",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.35.0",
    
    # Additional dependencies installed during development
    "accelerate>=1.10.0",
    "filelock>=3.18.0",
    "fsspec>=2025.7.0",
    "Jinja2>=3.1.6",
    "jiter>=0.10.0",
    "joblib>=1.5.1",
    "MarkupSafe>=3.0.2",
    "mpmath>=1.3.0",
    "networkx>=3.2.1",
    "packaging>=25.0",
    "psutil>=7.0.0",
    "PyYAML>=6.0.2",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "safetensors>=0.6.2",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.21.4",
    "tqdm>=4.67.1",
    "typing_extensions>=4.14.1",
    "urllib3>=2.5.0",
    
    # Database connector (MariaDB)
    "mariadb>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Horizontal-Labs/Argument-Mining"
Repository = "https://github.com/Horizontal-Labs/Argument-Mining"
Issues = "https://github.com/Horizontal-Labs/Argument-Mining/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 